# rgbast

./: .env.example  Dockerfile.production  README.md  alembic.ini  docker-compose.production.yml  nginx.conf  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_bigint_user_created_at.py  0003_folders_palette_paths.py  0004_user_email_verification.py  0005_colleagues_table.py  0006_user_email_verify_code.py  0007_color_bookmark_table.py
app/: main.py
app/api/: auth.py  colleagues.py  color.py  color_bookmarks.py  folders.py  palettes.py  search.py  users.py
app/controllers/: auth.py  colleague.py  color.py  color_bookmark.py  folder.py  palette.py  search.py  user.py
app/core/: database.py
app/models/: colleague.py  color_bookmark.py  folder.py  palette.py  palette_color.py  user.py
app/schemas/: auth.py  colleague.py  color.py  color_bookmark.py  folder.py  palette.py  search.py  user.py
app/scripts/: init_db.py
app/services/: auth.py  colleague.py  color.py  color_bookmark.py  folder.py  mail.py  palette.py  user.py
