[project]
name = "rgbast"
version = "0.1.0"
description = "Color palette manager & other cool stuff"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "pillow>=11.3.0",
    "pycolornames>=0.0.2",
    "python-multipart>=0.0.20",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "ruff>=0.15.5",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.41.0",
]
